Fix ffm example